<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">An Android-based Smart Home</string>
    <string name="action_settings">Settings</string>
    <string name="Xu_Yiting_092732">Xu Yiting 092732</string>
    <string name="Final_Project">Final Project</string>
    <string name="Description">An Android-based Smart Home</string>
    <string name="Status">Status</string>
	<string name="no1">Temperature</string>
	<string name="no2">Humidity</string>
	<string name="no3">Light</string>
	<string name="Button1">Refresh</string>
	<string name="Button2">Speech</string>
	<string name="nope">-</string>
	<string name="unit1">℃</string>
	<string name="unit2">%Rh</string>
	<string name="unit3">Lux</string>
	<string name="TextView">waiting</string>
</resources>