<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:text="@string/unit2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0000FF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/Status" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:text="@string/unit1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0000FF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="14dp"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/nope"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00FF00"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginTop="88dp"
        android:text="@string/no2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF0000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginTop="14dp"
        android:text="@string/no1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF0000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_toLeftOf="@+id/textView6"
        android:text="@string/nope"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00FF00"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toLeftOf="@+id/textView7"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="39dp"
        android:text="@string/no3"
        android:textColor="#FF0000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignParentRight="true"
        android:text="@string/unit3"
        android:textColor="#0000FF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/textView5"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/nope"
        android:textColor="#00FF00"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="29dp"
        android:layout_toLeftOf="@+id/textView6"
        android:text="@string/Button2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignLeft="@+id/button2"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView15"
        android:layout_toLeftOf="@+id/textView11"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_marginBottom="33dp"
        android:text="@string/TextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView15"
        android:layout_below="@+id/button2"
        android:layout_marginTop="32dp"
        android:text="@string/TextView" />

</RelativeLayout>